cmake_minimum_required(VERSION 4.0)
project(TF_C)

set(CMAKE_CXX_STANDARD 14)

add_executable(TF_C
        .idea/.gitignore
        .idea/c_cpp_properties.json
        .idea/copilot.data.migration.agent.xml
        .idea/copilot.data.migration.edit.xml
        .idea/modules.xml
        .idea/TF-C.iml
        .idea/vcs.xml
        .idea/workspace.xml
        README.md
        xadrez.c)
